// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`upload-user-avatar-by-id should handle non-existent temporary file id 1`] = `
{
  "content": [],
  "isError": true,
  "structuredContent": {
    "detail": "The file key did not resolve in to a file",
    "operationStatus": "AvatarFileNotFound",
    "status": 400,
    "title": "Avatar file not found",
    "type": "Error",
  },
}
`;

exports[`upload-user-avatar-by-id should handle non-existent user id 1`] = `
{
  "content": [],
  "isError": true,
  "structuredContent": {
    "detail": "The specified user was not found.",
    "operationStatus": "UserNotFound",
    "status": 404,
    "title": "The user was not found",
    "type": "Error",
  },
}
`;

exports[`upload-user-avatar-by-id should upload avatar for user by id 1`] = `
{
  "content": [
    {
      "text": "",
      "type": "text",
    },
  ],
}
`;
